FIXED - bug 332836: Unnecessary creation of Character objects https://bugs.eclipse.org/bugs/show_bug.cgi?id=332836
git-svn-id: http://dev.eclipse.org/svnroot/rt/org.eclipse.gemini.dbaccess/trunk@35 12902edb-6d80-0410-83f6-77bc01f5a9c0